make the post-show background overflow correctly

--- a/app/assets/stylesheets/posts/post_show.scss
+++ b/app/assets/stylesheets/posts/post_show.scss
@@ -5,6 +5,7 @@
     background-color: $base-bg;
     display: flex;
     justify-content: space-between;
+    overflow-y: auto;
 }
 
 .post-show-side {
